fixed BaseContextMenu z-index && annotators SPs trigger

--- a/services/frontend/src/components/BaseContextMenu/BaseContextMenu.module.scss
+++ b/services/frontend/src/components/BaseContextMenu/BaseContextMenu.module.scss
@@ -10,7 +10,7 @@
   border-radius: 12px !important;
   box-shadow: 0px 8px 15px rgba(14, 1, 66, 0.15) !important;
   opacity: 1 !important;
-  z-index: 10 !important;
+  z-index: 0 !important;
   display: flex;
   flex-direction: column;
   
